// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddExpenseForm Add Expense 1`] = `
.emotion-1 {
  margin: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  min-width: 9rem !important;
}

<div
  className="emotion-1"
>
  <div
    className="ui action input"
  >
    <input
      onChange={[Function]}
      placeholder="Expense"
      type="text"
      value=""
    />
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown emotion-0"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        className="default text"
        role="alert"
      >
        Date
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Date
          </span>
        </div>
      </div>
    </div>
    <button
      className="ui teal disabled button"
      disabled={true}
      onClick={[Function]}
      tabIndex={-1}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Contact Contact 1`] = `
<div
  className="ui container"
>
  <div
    className="ui basic segment"
  >
    <div
      className="ui header"
    >
      ぜひご意見をお寄せください。
    </div>
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <textarea
          aria-describedby={null}
          onChange={[Function]}
          onInput={[Function]}
          placeholder="Please give me your feedback."
          rows={9}
          value=""
        />
      </div>
      <div
        className="field"
      >
        <button
          aria-describedby={null}
          className="ui teal circular button"
          onClick={[Function]}
        >
          送信
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Detail Detail 1`] = `
<div
  className="ui grid"
>
  <div
    className="twelve wide column"
  >
    <table
      className="ui very basic table"
    >
      <tbody
        className=""
      >
        <tr
          className=""
        >
          <td
            className=""
          >
            <div
              className="ui grey big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="tag icon"
                onClick={[Function]}
              />
              ¥ 1000
            </div>
          </td>
          <td
            className=""
          >
            <div
              className="ui teal big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="food icon"
                onClick={[Function]}
              />
              ¥ 2000
            </div>
          </td>
          <td
            className=""
          >
            <div
              className="ui violet big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="home icon"
                onClick={[Function]}
              />
              ¥ 3000
            </div>
          </td>
          <td
            className=""
          >
            <div
              className="ui yellow big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="power cord icon"
                onClick={[Function]}
              />
              ¥ 1000
            </div>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            <div
              className="ui blue big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="bath icon"
                onClick={[Function]}
              />
              ¥ 2000
            </div>
          </td>
          <td
            className=""
          >
            <div
              className="ui red big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fire icon"
                onClick={[Function]}
              />
              ¥ 3000
            </div>
          </td>
          <td
            className=""
          >
            <div
              className="ui orange big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="phone icon"
                onClick={[Function]}
              />
              ¥ 1000
            </div>
          </td>
          <td
            className=""
          >
            <div
              className="ui green big label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="subway icon"
                onClick={[Function]}
              />
              ¥ 2000
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="middle aligned four wide column"
  >
    <div
      className="ui teal inverted center aligned segment"
    >
      <div
        className="ui header"
      >
        Total Expenses
      </div>
      <div
        className="ui huge header"
      >
        ¥
         
        15000
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpenseBarChart Expense Bar Chart 1`] = `
<div>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 300,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots ExpensePieChart Expense Pie Chart 1`] = `
<div>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 300,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots InputFile Input File 1`] = `
.emotion-5 {
  margin: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1:hover {
  cursor: text;
}

.emotion-0 {
  min-width: 15rem;
}

.emotion-4 {
  padding: 0 !important;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.9rem 1rem;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-2 {
  display: none;
}

<div
  className="emotion-5"
>
  <div
    className="ui buttons"
  >
    <div
      className="ui left labeled button emotion-1"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <p
        className="ui basic label emotion-0"
        onClick={[Function]}
      >
        File name
      </p>
    </div>
    <button
      className="ui teal basic button emotion-4"
      onClick={[Function]}
    >
      <label
        className="emotion-3"
        htmlFor="selectFile"
      >
        Select File
        <input
          accept="image/*"
          className="emotion-2"
          id="selectFile"
          onChange={[Function]}
          type="file"
        />
      </label>
    </button>
    <button
      className="ui teal disabled button"
      disabled={true}
      onClick={[Function]}
      tabIndex={-1}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout Layout 1`] = `
.emotion-1 {
  padding: 0.1rem !important;
}

.emotion-0 {
  font-family: 'Lexend Peta',sans-serif;
  font-size: 2rem !important;
  color: #fff;
  padding: 0 !important;
  margin: 0.5rem 1.5rem !important;
}

.emotion-5 {
  margin-top: 2rem !important;
}

.emotion-4 {
  padding-top: 0.5rem;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-flex-direction: column !important;
  -ms-flex-direction: column !important;
  flex-direction: column !important;
  min-height: 100vh !important;
}

.emotion-3 {
  margin-top: auto;
  text-align: center;
  padding: 1.5rem 0;
}

<div>
  <div
    className="ui container"
  >
    <div
      className="ui teal inverted secondary top fixed menu"
    >
      <a
        className="item emotion-1"
        onClick={[Function]}
      >
        <div
          className="ui basic segment emotion-0"
        >
          VisiBO
        </div>
      </a>
      <a
        className="active item"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Contact
      </a>
      <a
        className="right item"
        onClick={[Function]}
      >
        Log in
      </a>
    </div>
  </div>
  <div
    className="ui basic segment pushable emotion-5"
  >
    <div
      className="ui vertical ui overlay right thin sidebar menu"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Home
        <i
          aria-hidden="true"
          className="home icon"
          onClick={[Function]}
        />
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Contact
        <i
          aria-hidden="true"
          className="gamepad icon"
          onClick={[Function]}
        />
      </a>
      <a
        className="right item"
        onClick={[Function]}
      >
        Log in
        <i
          aria-hidden="true"
          className="user icon"
          onClick={[Function]}
        />
      </a>
    </div>
    <div
      className="pusher emotion-4"
    >
      <div
        className="ui basic loading vertical segment"
      />
      <div
        className="emotion-3"
      >
        <div
          className="emotion-2"
        >
          <div
            className="ui divider"
          />
          <h4>
            Copyright © 2020 kozukata1993 All Rights Reserved.
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link First 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  Go to "second"
</button>
`;

exports[`Storyshots Link Second 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  Go to "first"
</button>
`;

exports[`Storyshots LoginForm Login Form 1`] = `
.emotion-0 {
  margin-bottom: 1rem !important;
}

<div
  className="ui center aligned middle aligned grid"
>
  <div
    className="four wide column"
    style={
      Object {
        "minWidth": 350,
      }
    }
  >
    <h2
      className="ui teal center aligned header"
    >
      Log in
    </h2>
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="required field"
      >
        <div
          className="field"
        >
          <div
            className="ui fluid left icon input"
          >
            <input
              aria-describedby={null}
              onChange={[Function]}
              placeholder="E-mail address"
              type="text"
            />
            <i
              aria-hidden="true"
              className="at icon"
              onClick={[Function]}
            />
          </div>
        </div>
        <div
          className="field"
        >
          <div
            className="ui fluid left icon input"
          >
            <input
              aria-describedby={null}
              onChange={[Function]}
              placeholder="Password"
              type="password"
            />
            <i
              aria-hidden="true"
              className="lock icon"
              onClick={[Function]}
            />
          </div>
        </div>
        <button
          className="ui teal circular fluid button"
          onClick={[Function]}
        >
          Log in
        </button>
      </div>
    </form>
    <div
      className="ui horizontal section divider"
    >
      or
    </div>
    <button
      className="ui google plus circular fluid button emotion-0"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="google icon"
        onClick={[Function]}
      />
      Google でログイン
    </button>
    <button
      className="ui twitter circular fluid button emotion-0"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="twitter icon"
        onClick={[Function]}
      />
      Twitter でログイン
    </button>
    <button
      className="ui grey circular fluid button emotion-0"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="user icon"
        onClick={[Function]}
      />
      ゲスト でログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots MyTable My Table 1`] = `
<table
  className="ui table"
>
  <tbody
    className=""
  >
    <table
      className="ui very basic table"
    >
      <thead
        className=""
      >
        <tr
          className=""
        >
          <th
            className="three wide"
          >
            Date
          </th>
          <th
            className="three wide"
          >
            Amount
          </th>
          <th
            className="four wide"
          >
            Tag
          </th>
          <th
            className="six wide"
          >
            Action
          </th>
        </tr>
      </thead>
      <tbody
        className=""
      >
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/1
          </td>
          <td
            className=""
          >
            1000
          </td>
          <td
            className=""
          >
            <div
              className="ui teal large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="food icon"
                onClick={[Function]}
              />
              食費
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/2
          </td>
          <td
            className=""
          >
            2000
          </td>
          <td
            className=""
          >
            <div
              className="ui yellow large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="power cord icon"
                onClick={[Function]}
              />
              電気代
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/3
          </td>
          <td
            className=""
          >
            3000
          </td>
          <td
            className=""
          >
            <div
              className="ui red large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fire icon"
                onClick={[Function]}
              />
              ガス代
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/4
          </td>
          <td
            className=""
          >
            4000
          </td>
          <td
            className=""
          >
            <div
              className="ui blue large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="bath icon"
                onClick={[Function]}
              />
              水道代
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/5
          </td>
          <td
            className=""
          >
            5000
          </td>
          <td
            className=""
          >
            <div
              className="ui violet large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="home icon"
                onClick={[Function]}
              />
              家賃
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </tbody>
</table>
`;

exports[`Storyshots Storybook Knobs As Dynamic Variables 1`] = `
<div>
  I am James and I'm 35 years old.
</div>
`;

exports[`Storyshots Storybook Knobs With A Button 1`] = `
<button
  disabled={false}
  type="button"
>
  Hello Storybook
</button>
`;

exports[`Storyshots actionButton Button 1`] = `
<button
  className="ui button"
  onClick={[Function]}
>
  Click Here
</button>
`;
